--- a/tex/kapitel/kapitel_1_einleitung.tex
+++ b/tex/kapitel/kapitel_1_einleitung.tex
@@ -23,7 +23,7 @@ Als Simulationsumgebung bietet sich Gazebo an, da Gazebo neben einer Visualisier
 
 \section{Aufbau der Arbeit}
 
-Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners in das \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf direkte und inverse Kinematik sowie die Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie das \ac{ROS} und Gazebo vorgestellt.
+Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners in das \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf direkte und inverse Kinematik sowie die Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie das \ac{ROS} und Gazebo vorgestellt. Des Weiteren wird die Verwendung von Robotermodellen in \ac{ROS} und Gazebo erklärt.
 
 \autoref{kap3} geht auf verwandete Arbeiten ein. Diese werden in \autoref{kap4} genutzt, um eine Lösung für die Laufplanung mit dem Akrobat herzuleiten. \autoref{kap5} stellt die Details der Implementierung dar.
 
