--- a/tex/kapitel/kapitel_2_grundlagen.tex
+++ b/tex/kapitel/kapitel_2_grundlagen.tex
@@ -1064,7 +1064,7 @@ Eine Möglichkeit das \ac{URDF}-Format zu verbessern bieten \ac{Xacro}. \ac{Xacr
 
 Nun wird auf die drei wesentlichen Modelle des \ac{URDF}-Formats eingegangen: Das Visualisierungmodell, das Kollisionsmodell und das Modell für Massenschwerpunkte und Trägheitsmomente.
 
-\subsection{Aufsetzen der Visualisierung}
+\subsection{Aufsetzen des Visualisierungsmodells}
 
 Beim Visualisierungsmodell gibt es zwei Möglichkeiten der Angabe eines Segments.
 \begin{itemize}
@@ -1078,7 +1078,7 @@ Gerade bei Robotern wie dem Akrobat oder dem Lauron eignet sich die Verwendung e
 
 Auch das Kollssionsmodell kann entweder als \ac{STL}-Datei oder als geometrisches Objekt angegeben werden. Da die \ac{STL}-Dateien viel detaillierter sind, wird daher zwar mehr Rechenleistung benötigt, aber auch die physikalischen Bewegungen sehen damit realer aus. Eine Möglichkeit wäre es die 3D-Modelle mittels MeshLab \autocite{LocalChapterEvents:ItalChap:ItalianChapConf2008:129-136} runterzurechnen, so dass sie später besser von Gazebo verarbeitet werden können, da sie optimiert sind.
 
-\subsection{Aufsetzen der Massenschwerpunkte und der Trägheitsmomente}
+\subsection{Aufsetzen des Modells für Massenschwerpunkte und Trägheitsmomente}
 
 \begin{figure}[t!]
  \centering
