--- a/tex/preambel.tex
+++ b/tex/preambel.tex
@@ -261,3 +261,6 @@
 \usepackage[lcgreekalpha]{stix}
 
 \usepackage[square,compress]{natbib}
+
+\usepackage[intoc, german]{nomencl} 
+\makenomenclature
