--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -119,6 +119,10 @@
 \addchap{\hsmaabbreviations}
 \input{kapitel/abkuerzungen}
 
+% Abkürzungsverzeichnis
+\printnomenclature
+\input{kapitel/nomenclature}
+
 % Tabellenverzeichnis erzeugen
 \cleardoublepage
 \phantomsection
