--- a/tex/kapitel/nomenclature.tex
+++ b/tex/kapitel/nomenclature.tex
@@ -1,6 +1,8 @@
 \nomenclature{$\vec{s}$}{Position und Orientierung des Endeffektors} 
 \nomenclature{$\vec{q}$}{Gelenkvariablen}
-\nomenclature{$^{a}_{b}T$}{Transformationsmatrix von $a$ nach $b$}
-\nomenclature{m}{Masse}
-\nomenclature{V}{Volumen}
-\nomenclature{s}{Skalierungsfaktor}
+\nomenclature{$^{a}_{b}T$}{Transformationsmatrix von Gelenk $a$ nach $b$}
+\nomenclature{$_{a}^{b}R$}{Rotationsmatrix von Gelenk $a$ nach $b$}
+\nomenclature{$P_{n}$}{Wegpunkt n des Random Samplings}
+\nomenclature{$m$}{Masse}
+\nomenclature{$V$}{Volumen}
+\nomenclature{$s$}{Skalierungsfaktor}
