fussposition suche als pgf

--- a/tex/kapitel/kapitel_6_test.tex
+++ b/tex/kapitel/kapitel_6_test.tex
@@ -13,23 +13,31 @@ Das Random Sampling erfolgt wie in \autoref{kap3} beschrieben. Dabei gibt es ein
   \centering
   \begin{subfigure}[b]{.5\linewidth}
     \centering
-    \includegraphics[scale=0.45]{kapitel5/footdownSuccess1}
+    \resizebox{\linewidth}{!}{
+      \input{bilder/kapitel5/footdownsuccess1.pgf}
+    }
     \subcaption{Direkte Suche}\label{kap5:footDownNormal1}
   \end{subfigure}%
   \begin{subfigure}[b]{.5\linewidth}
     \centering
-    \includegraphics[scale=0.45]{kapitel5/footdownSuccess2}
+    \resizebox{\linewidth}{!}{
+      \input{bilder/kapitel5/footdownsuccess2.pgf}
+    }
     \subcaption{Direkte Suche}\label{kap5:footDownNormal2}
   \end{subfigure}\\
   \\[\smallskipamount]
   \begin{subfigure}[b]{.5\linewidth}
     \centering
-    \includegraphics[scale=0.45]{kapitel5/footdownnoSuccess1}
+    \resizebox{\linewidth}{!}{
+      \input{bilder/kapitel5/footdownnosuccess1.pgf}
+    }
     \subcaption{Spiralsuche}\label{kap5:footDownSpiral1}
   \end{subfigure}%
   \begin{subfigure}[b]{.5\linewidth}
     \centering
-    \includegraphics[scale=0.45]{kapitel5/footdownnoSuccess2}
+    \resizebox{\linewidth}{!}{
+      \input{bilder/kapitel5/footdownnosuccess2.pgf}
+    }
     \subcaption{Spiralsuche}\label{kap5:footDownSpiral2}
   \end{subfigure}%
   \caption{Auswertung der Positionsfindung beim Absetzen eines Fußes}
