--- a/tex/kapitel/nomenclature.tex
+++ b/tex/kapitel/nomenclature.tex
@@ -5,4 +5,4 @@
 \nomenclature{$P_{n}$}{Wegpunkt n des Random Samplings}
 \nomenclature{$m$}{Masse}
 \nomenclature{$V$}{Volumen}
-\nomenclature{$s$}{Skalierungsfaktor}
+\nomenclature{$s$}{Skalierungsfaktor für MeshLab}
