--- a/tex/kapitel/kapitel_4_konzept.tex
+++ b/tex/kapitel/kapitel_4_konzept.tex
@@ -4,7 +4,7 @@
 \begin{figure}[b!]
   \centering
   \includegraphics[width=\linewidth]{kapitel4/architecture}
-  \caption{Architektur der Lösung mit Gazebo, \ac{ROS} und ros\_control}
+  \caption[Architektur der Lösung mit Gazebo, \ac{ROS} und ros\_control]{Architektur der Lösung mit Gazebo, \ac{ROS} und ros\_control \autocite{chitta2017ros_control}}
   \label{Kap4:architecture}
 \end{figure}
 
